force-app/main/default/objects/Contract_Order_Routing_Sheet__c/Contract_Order_Routing_Sheet__c.object-meta.xml
<CustomObject>
    <description>Stores the checklist information completed by Sales Contract&apos;s team when an Order is flagged for CORS review in ERP (SAP) system</description>
    <label>Contract Order Routing Sheet</label>
    <nameField>
        <displayFormat>CORS - {0000000}</displayFormat>
        <label>Contracts Order Routing Sheet #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Order Routing Sheets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>