force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>This field is lookup to account</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Order Routing Sheets</relationshipLabel>
    <relationshipName>Contract_Order_Routing_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>