force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/Contract_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review_Status__c</fullName>
    <description>To capture the review status of the contract</description>
    <label>Contract Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>