force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/Distributor_Or_Dealer_Details__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Or_Dealer_Details__c</fullName>
    <description>To capture the distributor/dealer details</description>
    <label>Distributor Or Dealer Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>