force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/District_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>District_Sales_Manager__c</fullName>
    <description>To capture district sales manager which holds user name</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Order_Routing_Sheets1</relationshipName>
    <type>Lookup</type>
</CustomField>