force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/Letter_Of_Acceptance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Letter_Of_Acceptance_Notes__c</fullName>
    <description>To capture the Letter of acceptance notes</description>
    <label>Letter Of Acceptance Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>