force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>This field is lookup to opportunity linked to contract</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contract Order Routing Sheets</relationshipLabel>
    <relationshipName>Contract_Order_Routing_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>