force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
     <description>This field is lookup to Order linked to contract</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Apttus_Config2__Order__c</referenceTo>
    <relationshipLabel>Contract Order Routing Sheets</relationshipLabel>
    <relationshipName>Contract_Order_Routing_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>