force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>This field is to capture PO Number</description>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>