force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/Quotation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Amount__c</fullName>
    <description>This field is to capture Quotations Ammount based on associted quote on contract</description>
    <label>Quotation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>