force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/Quotation_Currency__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Currency__c</fullName>
    <description>This field is to capture Quote currency</description>
    <label>Quotation Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>