force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/Quotation_Number__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Number__c</fullName>
    <description>Capture the Quotation number</description>
    <label>Quotation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>