force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/Regional_Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Regional_Distribution_List__c</fullName>
    <description>This field is automatically calculated based on Territory Region (Account sub region for AMR) using custom metadata records in Code parameter.</description>
    <inlineHelpText>This field is automatically calculated based on Territory Region (Account sub region for AMR)  being updated or changed on the record.</inlineHelpText>
    <label>Regional Distribution List</label>
    <type>Email</type>
</CustomField>