force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/Rev_Rec_Code__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Code__c</fullName>
    <description>This field is to capture record code</description>
    <label>Rev Rec Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rev_Rec_Terms</valueSetName>
    </valueSet>
</CustomField>