force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/Rev_Rec_Code_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Code_Milestone__c</fullName>
    <description>This field is to capture record code milestone on contract</description>
    <label>Rev Rec Code Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rev_Rec_Terms</valueSetName>
    </valueSet>
</CustomField>