force-app/main/default/objects/Contract_Order_Routing_Sheet__c/fields/Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee__c</fullName>
    <description>This is lookup field to account, to capture ultimate consignee on contract</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Order Routing Sheets (Ultimate Consignee)</relationshipLabel>
    <relationshipName>Contract_Order_Routing_Sheets1</relationshipName>
    <type>Lookup</type>
</CustomField>