force-app/main/default/objects/Contract_Order_Routing_Sheet__c/validationRules/CheckCannotChangeCompletedStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCannotChangeCompletedStatus</fullName>
    <active>true</active>
    <description>Validation rule to prevent the edit of status once its changed to completed by anyone except for the admin</description>
    <errorConditionFormula>AND (
    ISCHANGED( Contract_Review_Status__c ),
    ISPICKVAL(PRIORVALUE( Contract_Review_Status__c ) , &apos;Completed&apos;),
    NOT(ISPICKVAL(Contract_Review_Status__c , &apos;Completed&apos;)),
    $Profile.Name &lt;&gt; &apos;System Administrator&apos; ,
    NOT( CONTAINS($Profile.Name, &apos;Integration&apos;) )
)</errorConditionFormula>
    <errorMessage>You do not have the level of access necessary to change the Contract Order Status back from &quot;Completed&quot;. Please click &quot;Cancel&quot; and contact your administrator if this change is necessary.</errorMessage>
</ValidationRule>