force-app/main/default/objects/Contract_Order_Routing_Sheet__c/validationRules/CheckForExpiredQuotes.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckForExpiredQuotes</fullName>
    <active>true</active>
    <description>Validation rule to enforce user to enter Expired Quotation Comments if Quote Expiration Date is more than days before today</description>
    <errorConditionFormula>AND (
    Quotation_Expiration_Date__c + 5 &lt; TODAY(),
    ISBLANK( Expired_Quotation_Comments__c ),
    $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
    NOT( CONTAINS($Profile.Name, &apos;Integration&apos;) )
)</errorConditionFormula>
    <errorDisplayField>Expired_Quotation_Comments__c</errorDisplayField>
    <errorMessage>Quotion referenced in this CORS has expired. Please provide &quot;Expired Quote Comments&quot;.</errorMessage>
</ValidationRule>