force-app/main/default/objects/Contract_Order_Routing_Sheet__c/validationRules/CheckForLetterOfAcceptanceNotes.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckForLetterOfAcceptanceNotes</fullName>
    <active>true</active>
    <description>Validation rule to enforce user to enter Letter of Acceptance notes if the value selected from Rev Rec Code is &apos;Acceptance Upon Performance (ACP)&apos;</description>
    <errorConditionFormula>AND (
    /* Profiles who bypass rule */
    NOT(CONTAINS($Profile.Name, &apos;Integration&apos;)),
    $Profile.Name &lt;&gt; $Label.ProfileSystemAdmin,

    /* Is ACP and no notes provided */
    ISPICKVAL(Rev_Rec_Code__c, &apos;Acceptance Upon Performance (ACP)&apos;),
    ISBLANK(Letter_Of_Acceptance_Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Letter_Of_Acceptance_Notes__c</errorDisplayField>
    <errorMessage>When Rev Rec Code &quot;Acceptance Upon Performance (ACP)&quot; is selected, Letter Of Acceptance Notes field must be filled.</errorMessage>
</ValidationRule>