force-app/main/default/objects/Contract_Order_Routing_Sheet__c/validationRules/CheckForOtherProductDetails.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckForOtherProductDetails</fullName>
    <active>true</active>
    <description>Validation rule to enter &apos;Other Product Details&apos; if Products chosen is &apos;Other - Product Details&apos;</description>
    <errorConditionFormula>AND (
    /* Profiles who bypass rule */
    NOT(CONTAINS($Profile.Name, &apos;Integration&apos;)),
    $Profile.Name &lt;&gt; $Label.ProfileSystemAdmin,

    /* Has an &apos;Other&apos; type product with no details provided */
    INCLUDES(Products__c , &apos;Other - Product Details&apos;),
    ISBLANK(Other_Product_Details__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Product_Details__c</errorDisplayField>
    <errorMessage>If &quot;Other - Product Details&quot; is selected as a Product Value, then please enter the details in &quot;Other - Product Details&quot; field.</errorMessage>
</ValidationRule>