force-app/main/default/objects/Contract_Order_Routing_Sheet__c/validationRules/CheckForPaymentTermOverrideComments.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckForPaymentTermOverrideComments</fullName>
    <active>true</active>
    <description>Validation rule to Enforce user to enter Payment Term Override comments once Payment details is changed.</description>
    <errorConditionFormula>AND (
    NOT(ISNEW()),
    ISCHANGED( Payment_Terms__c ),
    ISBLANK( Payment_Term_Override_Comments__c ),
    NOT( CONTAINS($Profile.Name, &apos;Integration&apos;) )
)</errorConditionFormula>
    <errorDisplayField>Payment_Term_Override_Comments__c</errorDisplayField>
    <errorMessage>When original Payment Term Details are updated, Payment Term Override Comments is required.</errorMessage>
</ValidationRule>