force-app/main/default/objects/Contract_Order_Routing_Sheet__c/validationRules/CheckForTermsAndConditionsComments.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckForTermsAndConditionsComments</fullName>
    <active>true</active>
    <description>Validate that the user provides Terms And Conditions Comments, if &quot;Other - Provide Comments&quot; is selected as a value in Governing Terms And Conditions OR Evidence Of Terms and Conditions field.</description>
    <errorConditionFormula>AND (
    /* Profiles who bypass rule */
    $Profile.Name &lt;&gt; $Label.ProfileSystemAdmin,
    NOT(CONTAINS($Profile.Name, &apos;Integration&apos;)),

    /* T&amp;C comments blank */
    ISBLANK(Terms_And_Conditions_Comments__c), 

    /* &apos;Other&apos; selected in one of these fields */
    OR (
        ISPICKVAL(Evidence_of_Terms_And_Conditions__c, &apos;Other - Provide Comments&apos;),
        ISPICKVAL(Governing_Terms_And_Conditions__c,   &apos;Other - Provide Comments&apos;)
    )
)</errorConditionFormula>
    <errorDisplayField>Terms_And_Conditions_Comments__c</errorDisplayField>
    <errorMessage>You must provide Terms And Conditions Comments, if &quot;Other - Provide Comments&quot; is selected as a value in Governing Terms And Conditions  OR Evidence Of  Terms and Conditions field.</errorMessage>
</ValidationRule>