force-app/main/default/objects/Contract_Order_Routing_Sheet__c/validationRules/CheckPostRoutingEditComments.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckPostRoutingEditComments</fullName>
    <active>true</active>
    <description>Validation rule to fill Post Routing Edit Comments when Send Email to Contract Admin And Orders is true</description>
    <errorConditionFormula>AND (
    /* Profiles who bypass rule */
    $Profile.Name &lt;&gt; $Label.ProfileSystemAdmin,
    NOT(CONTAINS($Profile.Name, &apos;Integration&apos;)),

    /* Comments missing but send email checked */
    Send_Email_to_Contract_Admin_And_Orders__c,
    ISBLANK(Post_Routing_Edit_Comments__c)
)</errorConditionFormula>
    <errorDisplayField>Post_Routing_Edit_Comments__c</errorDisplayField>
    <errorMessage>Please provide &quot;Post Routing Edit Comments&quot; ,when &quot;Send Email to Contract Admin And Orders&quot; is checked.</errorMessage>
</ValidationRule>