force-app/main/default/objects/Contract_Order_Routing_Sheet__c/listViews/AMR_CORS_Created_This_Quarter.listView-meta.xml
<ListView>
    <fullName>AMR_CORS_Created_This_Quarter</fullName>
    <columns>NAME</columns>
    <columns>Contract_Admin_Name__c</columns>
    <columns>Territory_Region__c</columns>
    <columns>Country__c</columns>
    <columns>Contract_Review_Status__c</columns>
    <columns>Account__c</columns>
    <columns>Quotation_Type__c</columns>
    <columns>PO_Amount__c</columns>
    <columns>Products__c</columns>
    <columns>Governing_Terms_And_Conditions__c</columns>
    <columns>Rev_Rec_Code__c</columns>
    <columns>Inco_Term_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory_Region__c</field>
        <operation>equals</operation>
        <value>AMR</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_QUARTER</value>
    </filters>
    <label>AMR: CORS Created This Quarter</label>
    <language>en_US</language>
</ListView>